Added buttons and callbacks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-    <script src="./rock-paper-scissors.js"></script>
+    <script src="./rock-paper-scissors.js" defer></script>
+
+    <button id="0">Rock</button>
+    <button id="1">Paper</button>
+    <button id="2">Scissors</button>
     
 </body>
 </html>
